load_balancer/ingress_internet_facing_ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: <NAMESPACE>
  name: <APP>-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/tags: env=<ENV>, app=<APP>
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: <SUBNET_ID_A>, <SUBNET_ID_B>, <SUBNET_ID_C>
    alb.ingress.kubernetes.io/certificate-arn: <AWS_ACM_ARN>
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/wafv2-acl-arn: <AWS_WAF_ARN>
spec:
  rules:
    - host: <DOMAIN_1>
      http:
        paths:
          - path: <DOMAIN_1_PATH>
            backend:
              serviceName: <DOMAIN_1_SERVICE>
              servicePort: <DOMAIN_1_SERVICE_PORT>
    - host: <DOMAIN_2>
      http:
        paths:
          - path: <DOMAIN_2_PATH>
            backend:
              serviceName: <DOMAIN_2_SERVICE>
              servicePort: <DOMAIN_2_SERVICE_PORT>
